--- a/learning.html
+++ b/learning.html
@@ -2,5 +2,7 @@
 <head><title>still learning</title></head>
 <body>
 <h3>WHAT AM I DOING</h3>
+  I made this video
+  https://drive.google.com/file/d/13xcKTN0tJBITqPBMIEGDsNNYn3LWpZMG/view?usp=sharing
 </body>
 </html>
