--- a/learning.html
+++ b/learning.html
@@ -3,6 +3,8 @@
 <body>
 <h3>WHAT AM I DOING</h3>
   I made this video
-  https://drive.google.com/file/d/13xcKTN0tJBITqPBMIEGDsNNYn3LWpZMG/view?usp=sharing
+ 
+   <iframe width="560" height="315" src="https://drive.google.com/file/d/13xcKTN0tJBITqPBMIEGDsNNYn3LWpZMG/view?usp=sharing" frameborder="0" allowfullscreen></iframe>
+      </iframe>
 </body>
 </html>
